docusaurus/src/components/HeaderDecoration.module.css
.header  {
  flex-grow:1;
} 

.connectorHeader {
  display: flex;
  align-items: start;
  justify-content: space-between;
  margin-bottom: 12px;
}

.connectorIcon {
  max-height: 40px;
  max-width: 40px;
  float: left;
  margin-right: 10px;
}

div.connectorMetadataCallout {
  margin-bottom: 15px;
  padding: 14px 20px;
  background-color: var(--color-grey-40);
  border-radius: 0px;
}

.connectorMetadata {
  width: 100%;
  margin: 0;
  display: flex;
  flex-direction: column;
  row-gap: 8px;
}

.connectorMetadata dt,
.connectorMetadata dd {
  display: inline-block;
}

.connectorMetadata dt {
  width: 150px;
}

.metadataStat {
  display: flex;
  align-items: center;
  font-size: 12px;
  font-weight: var(--ifm-font-weight-normal);
  flex-wrap: wrap;
}

.metadataStatLabel {
  display: inline-flex;
  align-items: center;
  font-weight: var(--ifm-font-weight-semibold);
  margin-right: 5px;
  flex: 0 1 auto;
}

.metadataStatValue {
  display: inline-flex;
  align-items: center;
  margin: 0;
  gap: 5px;
  flex: 0 1 auto;
  width: fit-content;
}

.metadataStatValue a {
  color: var(--ifm-color-primary-dark);
}

html[data-theme="dark"] .metadataStatValue a {
  color: var(--ifm-link-color);
}

.metadataStatValue > * {
  display: inline-flex;
  align-items: center;
}

.connectorMetadata .availability {
  display: inline-flex;
  align-items: center;
  gap: 8px;
  flex-wrap: wrap;
}

.connectorMetadata .availability > span {
  display: inline-flex;
  align-items: center;
  column-gap: 2px;
  flex: 0 1 auto;
  background-color: var(--color-green-40);
  border: 1px solid var(--color-green-800);
  color: var(--color-green-800);
  font-size: 12px;
}

.connectorMetadata .availability .unavailable {
  color: var(--color-dark-blue-700);
  background-color: var(--color-dark-blue-40);
  border: 1px solid var(--color-dark-blue-40);
}

html[data-theme="dark"] .connectorMetadata .availability > span {
  display: inline-flex;
  align-items: center;
  column-gap: 2px;
  flex: 0 1 auto;
  background-color: var(--color-grey-40);
  border: 1px solid var(--color-green-40);
  color: var(--color-gray-40);
  font-size: 12px;
}

html[data-theme="dark"] .connectorMetadata .availability .unavailable {
  color: var(--ifm-color-emphasis-600);
  border: none;
}

[data-theme="dark"] .connectorMetadata .availability .unavailable {
  color: var(--ifm-color-emphasis-400);
}

.metricIcon {
  display: flex;
  align-items: center;
  justify-content: center;
}

.metricIcon svg {
  height: 12px;
  width: auto;
}

